# web-ocaml-rust-tuto

./: .gitignore  .gitlab-ci.yml  README.md
001-basic-mixed-hello-world/: Makefile  README.md  bootstrap.js  package-lock.json  package.json  webpack.config.js
001-basic-mixed-hello-world/ocaml/src/: dune  print_hello.ml
001-basic-mixed-hello-world/rust/: Cargo.toml
001-basic-mixed-hello-world/rust/src/: lib.rs
002-basic-typed-values/: Makefile  README.md  bootstrap.js  package.json
002-basic-typed-values/ocaml/: rust-ocaml-basic-typed-values.opam
002-basic-typed-values/ocaml/src/: dune  typed_values.ml
002-basic-typed-values/rust/: Cargo.toml
002-basic-typed-values/rust/src/: lib.rs
003-passing-arguments-from-ocaml-to-rust/: README.md  package.json
003-passing-arguments-from-ocaml-to-rust/ocaml/src/: dune  lib.ml
003-passing-arguments-from-ocaml-to-rust/rust/: Cargo.toml
003-passing-arguments-from-ocaml-to-rust/rust/src/: lib.rs
004-pointers/: Makefile  bootstrap.js  package.json  webpack.config.js
004-pointers/ocaml/: rust-ocaml-pointer.opam
004-pointers/ocaml/src/: dune  lib.ml
004-pointers/rust/: Cargo.toml
004-pointers/rust/src/: lib.rs
