[package]
name = "js-of-ruml"
version = "0.1.0"
authors = ["Danny Willems <be.danny.willems@gmail.com>"]
edition = "2018"

# https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]

[lib]
name = "js_of_ruml"
path = "src/lib.rs"
# TODO: check crate-type https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# cdylib is required
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"