[package]
name = "rust-ocaml-pointers"
version = "0.1.0"
authors = ["Danny Willems <be.danny.willems@gmail.com>"]
edition = "2018"

# https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]

[lib]
name = "rust_ocaml_pointers"
path = "src/lib.rs"
# TODO: check crate-type https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# cdylib is required
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"
rand = {version = "0.7.3", features = ["wasm-bindgen"]}
rand_core = "*"
getrandom = { version = "*", features = ["wasm-bindgen"] }
ff = "0.6"
pairing = "0.16"
group = "0.6.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"