(executable
 (name print_hello)
 (libraries js_of_ocaml
            js_of_ocaml-compiler
            js_of_ocaml-ppx
 )
 (modes byte)
 (js_of_ocaml)
 (preprocess (pps js_of_ocaml-ppx))
 (flags (:standard ))
)

(rule
 (targets PrintHello.js)
 (action
  (run %{bin:js_of_ocaml}
    %{dep:print_hello.bc} --pretty --no-inline -o PrintHello.js
  )
 )
)

(alias (name default) (deps PrintHello.js))
